--- a/music/templates/music/create_album.html
+++ b/music/templates/music/create_album.html
@@ -3,7 +3,7 @@
 {% block albums_active %}active{% endblock %}
 
 {% block body %}
-<div class="container-fluid">
+<div class="container-fluid center">
 
     <div class="row">
 
