--- a/music/templates/music/base_visitor.html
+++ b/music/templates/music/base_visitor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}My music{% endblock %}</title>
+    <title>{% block title %}Music{% endblock %}</title>
     {% load static %}
     <link rel="shortcut icon" type="image/png" href="{%  static 'favicon.ico' %}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'music:index' %}">My music</a>
+            <a class="navbar-brand" href="{% url 'music:index' %}">...</a>
         </div>
 
         <!-- Items -->
@@ -39,4 +39,7 @@
 {% block body %}
 {% endblock %}
 </body>
+{% block content %}
+{% include 'music/footer.html' %}
+{% endblock %}
 </html>
