--- a/music/templates/music/login.html
+++ b/music/templates/music/login.html
@@ -3,7 +3,7 @@
 {% block login_active %}active{% endblock %}
 
 {% block body %}
-<div class="container-fluid">
+<div class="container-fluid center">
 
     <div class="row">
         <div class="col-sm-12 col-md-6">
