--- a/music/templates/music/register.html
+++ b/music/templates/music/register.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container-fluid">
 
-    <div class="row">
+    <div class="row center">
         <div class="col-sm-12 col-md-6">
             <div class="panel panel-default">
                 <div class="panel-body">
