--- a/music/templates/music/footer.html
+++ b/music/templates/music/footer.html
@@ -12,6 +12,11 @@
    color: black;
    text-align: center;
 }
+.modal-content {
+    -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    background-color: bisque;
+
 </style>
 </head>
 <body>
